--- a/.github/workflows/auth.yml
+++ b/.github/workflows/auth.yml
@@ -12,4 +12,4 @@ jobs:
         with:
           sfdx-auth-url: ${{ secrets.AUTH_SECRET }}
       - name: sfdx-test-run
-        run: sfdx force:apex:test:run -l RunLocalTests -w 30
+        run: sfdx force:apex:run:test -l RunLocalTests -w 30
