--- a/.github/workflows/pr-develop-branch.yml
+++ b/.github/workflows/pr-develop-branch.yml
@@ -4,10 +4,11 @@ name: Validate PR on develop branch
 # Definition when the workflow should run
 on:
     # The workflow will run whenever an event happens on a pull request
-    pull_request:
+    # pull_request:
+    push:
       # The events are that a PR is opened, or when a commit is pushed
       # to a branch that has an existing pull request
-      types: [opened, synchronize]
+      # types: [opened, synchronize]
       # The branches filter allows to specify that this workflow should only
       # run if the branch name is "develop". This way we prevent this workflow
       # from running when PRs are opened on other branches
@@ -67,11 +68,11 @@ jobs:
             # Once a developer has specified a list of classes to run, we need to be able
             # to extract this information from the PR, and pass it on the the VM.
 
-            - name: 'Read PR Body'
-              env:
+            # - name: 'Read PR Body'
+            #   env:
                 # The pull request body is available through the github context object
                 # we put the body of the pull request in an env variable (only available to this step)
-                PR_BODY: ${{github.event.pull_request.body}}
+                # PR_BODY: ${{github.event.pull_request.body}}
 
               # Here we print the content of the environment variable and
               # pipe to a a text file.
@@ -83,11 +84,11 @@ jobs:
               # Finally, we add the list of tests to the $GITHUB_ENV variable
               # as this allows us to reference the list in a subsequent step.  If you
               # were using a normal env variable, its value would not be available outside this step.
-              run: |
-                  echo $PR_BODY > ./pr_body.txt
-                  node ./parsePR.js              
-                  TESTS=$(cat testsToRun.txt)       
-                  echo "APEX_TESTS=$TESTS" >> $GITHUB_ENV
+              # run: |
+              #     echo $PR_BODY > ./pr_body.txt
+              #     node ./parsePR.js              
+              #     TESTS=$(cat testsToRun.txt)       
+              #     echo "APEX_TESTS=$TESTS" >> $GITHUB_ENV
                   
             # Now Install Salesforce CLI
             - name: 'Install Salesforce CLI'
