--- a/.github/workflows/pr-develop-branch.yml
+++ b/.github/workflows/pr-develop-branch.yml
@@ -4,15 +4,14 @@ name: Validate PR on develop branch
 # Definition when the workflow should run
 on:
     # The workflow will run whenever an event happens on a pull request
-    # pull_request:
-    push:
+    pull_request:
       # The events are that a PR is opened, or when a commit is pushed
       # to a branch that has an existing pull request
-      # types: [opened, synchronize]
+      types: [opened, synchronize]
       # The branches filter allows to specify that this workflow should only
       # run if the branch name is "develop". This way we prevent this workflow
       # from running when PRs are opened on other branches
-      branches: [ dev ]
+      branches: [ develop ]
       # We only care about changes to the force-app directory, which is the
       # root directory of the sfdx project. This prevents the job from running
       # when changing non-salesforce files (like this yml file).
@@ -68,11 +67,11 @@ jobs:
             # Once a developer has specified a list of classes to run, we need to be able
             # to extract this information from the PR, and pass it on the the VM.
 
-            # - name: 'Read PR Body'
-            #   env:
+            - name: 'Read PR Body'
+              env:
                 # The pull request body is available through the github context object
                 # we put the body of the pull request in an env variable (only available to this step)
-                # PR_BODY: ${{github.event.pull_request.body}}
+                PR_BODY: ${{github.event.pull_request.body}}
 
               # Here we print the content of the environment variable and
               # pipe to a a text file.
@@ -84,11 +83,11 @@ jobs:
               # Finally, we add the list of tests to the $GITHUB_ENV variable
               # as this allows us to reference the list in a subsequent step.  If you
               # were using a normal env variable, its value would not be available outside this step.
-              # run: |
-              #     echo $PR_BODY > ./pr_body.txt
-              #     node ./parsePR.js              
-              #     TESTS=$(cat testsToRun.txt)       
-              #     echo "APEX_TESTS=$TESTS" >> $GITHUB_ENV
+              run: |
+                  echo $PR_BODY > ./pr_body.txt
+                  node ./parsePR.js              
+                  TESTS=$(cat testsToRun.txt)       
+                  echo "APEX_TESTS=$TESTS" >> $GITHUB_ENV
                   
             # Now Install Salesforce CLI
             - name: 'Install Salesforce CLI'
@@ -171,17 +170,17 @@ jobs:
             # If the env variable does not equal 'all', we know that there is a list of
             # tests that can be run
 
-            # - name: 'Check-only deploy delta changes - run specified tests'
-            #   if: ${{ env.APEX_TESTS != 'all' }}
-            #   run: |
-            #       echo ${{env.APEX_TESTS}}
-            #       sfdx force:source:deploy -p "changed-sources/force-app" --checkonly --testlevel RunSpecifiedTests --runtests ${{env.APEX_TESTS}} --json
+            - name: 'Check-only deploy delta changes - run specified tests'
+              if: ${{ env.APEX_TESTS != 'all' }}
+              run: |
+                  echo ${{env.APEX_TESTS}}
+                  sfdx force:source:deploy -p "changed-sources/force-app" --checkonly --testlevel RunSpecifiedTests --runtests ${{env.APEX_TESTS}} --json
 
-            # # If the env variable equals all, we run all tests
-            # - name: 'Check-only deploy delta changes - run all tests'
-            #   if: ${{ env.APEX_TESTS == 'all' }}
-            #   run: |
-            #       sfdx force:source:deploy -p "changed-sources/force-app" --checkonly --testlevel RunLocalTests  --json
+            # If the env variable equals all, we run all tests
+            - name: 'Check-only deploy delta changes - run all tests'
+              if: ${{ env.APEX_TESTS == 'all' }}
+              run: |
+                  sfdx force:source:deploy -p "changed-sources/force-app" --checkonly --testlevel RunLocalTests  --json
 
-            # - name: 'Deploy destructive changes (if any)'
-            #   run: sfdx force:mdapi:deploy -d "changed-sources/destructiveChanges" --checkonly --ignorewarnings 
+            - name: 'Deploy destructive changes (if any)'
+              run: sfdx force:mdapi:deploy -d "changed-sources/destructiveChanges" --checkonly --ignorewarnings 
